tests/negative/duplicate_top_level_name.glyph
module neg

fn dup() -> number {
  return 1
}

fn dup() -> number {
  return 2
}
